deleted list tags

--- a/album.html
+++ b/album.html
@@ -22,13 +22,12 @@ table, th, td {
     <td>Gully Boy</td>
     <td>Divine and Ranveer Singh</td>
     <td>
-      <ul>
-          <li>Mere Gully Mein</li> 
-          <li>Asli Hip Hop</li> 
-          <li>Sher Aaya Sher</li> 
-          <li>Apna Time Aayega</li> 
-          <li>Doori</li>
-          </ul>
+          Mere Gully Mein,
+          Asli Hip Hop, 
+          Sher Aaya Sher,
+          Apna Time Aayega, 
+          Doori
+          
     	</td>
     <td>2019</td>
 
@@ -37,14 +36,11 @@ table, th, td {
     <td>Desi Kalakar</td>
     <td>Yo yo honey singh</td>
     <td>
-      <ul>
-          <li>Desi Kalakar</li> 
-          <li>Love Dose</li> 
-          <li>Brown Rang</li> 
-          <li>Daftar ki Girl</li> 
-          <li>One Thousand Miles</li>
-
-          </ul>
+          Desi Kalakaar,
+          Love Dose, 
+          Brown Rang, 
+          Daftar ki Girl, 
+          One Thousand Miles
     	</td>
     <td>2014</td>
 
@@ -54,13 +50,11 @@ table, th, td {
     <td>Rockstar</td>
     <td>A.R.Rahman</td>
     <td>
-      <ul>
-          <li>Phir Se Ud Chala</li> 
-          <li>Jo Bhi Main</li> 
-          <li>Kun Faya Kun</li> 
-          <li>Sheher Mein</li> 
-          <li>Nadaan Parinde</li>
-          </ul>
+          Phir Se Ud Chala,
+          Jo Bhi Main, 
+          Kun Faya Kun, 
+          Sheher Mein, 
+          Nadaan Parinde   
     	</td>
     <td>2011</td>
 
